// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchText blankState when there is no search term should render a blank state message 1`] = `
<div
  className="blank-state"
>
  <Icon
    icon="search"
  />
  <h4>
    <Translate
      context="System"
    >
      Search text
    </Translate>
  </h4>
  <p>
    <Translate
      context="System"
    >
      Search text description
    </Translate>
  </p>
</div>
`;

exports[`SearchText blankState when there is search term should render a no matching text message 1`] = `
<div
  className="blank-state"
>
  <Icon
    icon="search"
  />
  <h4>
    <Translate
      context="System"
    >
      No text match
    </Translate>
  </h4>
  <p>
    <Translate
      context="System"
    >
      No text match description
    </Translate>
  </p>
</div>
`;
